Pujat informacio inscripcions

--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,7 +66,8 @@
             
             <h3>Colònies 2019</h3>
             <section class="grid">
-                <div><a href="/docs/colonies-2019/Cartell%20Colonies%202019.pdf" title="Calendari d'Esplai" target="_blank"> <img alt="Cartell Colònies" src="/resources/logo_colonies_2019.png"></a><p>Cartell de Colònies 2019</p></div>
+                <div><a href="/docs/colonies-2019/Informaci%C3%B3%20Inscripcions%202019.pdf" title="Informació Inscripcions" target="_blank"> <img alt="Informació Inscripcions Colònies 2019" src="/resources/logo_colonies_2019.png"></a><p>Informació Inscripcions Colònies 2019</p></div>
+                <div><a href="/docs/colonies-2019/Cartell%20Colonies%202019.pdf" title="Cartell Coloniesi" target="_blank"> <img alt="Cartell Colònies" src="/resources/logo_colonies_2019.png"></a><p>Cartell de Colònies 2019</p></div>
             </section>
             
             <h3>Esplai Tercer Trimestre 2018/19</h3>
