Penjades Fitxes Inscripció Colonies 2019 i  Autoritzacions de medicaments

--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -66,6 +66,14 @@
             
             <h3>Colònies 2019</h3>
             <section class="grid">
+                <div><a href="/docs/colonies-2019/AUTORITZACI%C3%93%20MEDICAMENTS%20generals%202019.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2019.png"></a><p>Autorització Medicaments <b>GENERAL</b> (en cas que es cregui convenient)</p></div>
+                <div><a href="/docs/colonies-2019/AUTORITZACI%C3%93%20MEDICAMENTS%20especials%202019.pdf" title='Autoritzacio Medicaments' target="_blank"> <img alt="Informació Inscripcions" src="/resources/logo_colonies_2019.png"></a><p>Autorització Medicaments <b>ESPECIAL/CRÒNIC</b> (en cas que sigui necessari)</p></div>
+                <div><a href="/docs/colonies-2019/PETITS_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció PETITS</p></div>
+                <div><a href="/docs/colonies-2019/MITJANS_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció MITJANS</p></div>
+                <div><a href="/docs/colonies-2019/GRANS_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció GRANS</p></div>
+                <div><a href="/docs/colonies-2019/K1_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció K1</p></div>
+                <div><a href="/docs/colonies-2019/K2_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció K2</p></div>
+                <div><a href="/docs/colonies-2019/RUTA_Fitxes%20inscripci%C3%B3%202019.pdf" title='Inscripcions Colònies' target="_blank"> <img alt="Fitxa Inscripcio" src="/resources/logo_colonies_2019.png"></a><p>Fitxa Inscripció RUTA</p></div>
                 <div><a href="/docs/colonies-2019/Informaci%C3%B3%20Inscripcions%202019.pdf" title="Informació Inscripcions" target="_blank"> <img alt="Informació Inscripcions Colònies 2019" src="/resources/logo_colonies_2019.png"></a><p>Informació Inscripcions Colònies 2019</p></div>
                 <div><a href="/docs/colonies-2019/Cartell%20Colonies%202019.pdf" title="Cartell Coloniesi" target="_blank"> <img alt="Cartell Colònies" src="/resources/logo_colonies_2019.png"></a><p>Cartell de Colònies 2019</p></div>
             </section>
