Normativa inscripcions afegida i canvis als contactes

--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -63,6 +63,10 @@
         </section>
         
         <div class="container">
+            <h3>Esplai Primer Trimestre 2019/20</h3>
+            <section class="grid">
+                <div><a href="/docs/esplaiT1-2020/normativa%20inscripcions.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Inscripcions Esplai</p></div>
+            </section>
             
             <h3>Colònies 2019</h3>
             <section class="grid">
