--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,11 +58,13 @@
                 <ul>
                     <li><img src="/resources/CepituArmy.jpg"/></li>
                     <li><h4>Responsables d'Esplai</h4>
-                        <p><b>Ferran</b>: 610937033</p>
+                        <p><b>Carla</b>: 691964511</p>
+                        <p><b>Queralt</b>: 685111767</p>
                         <p><b>Sergi</b>: 681396012</p>
                         <h4>Responsables de Colònies</h4>
                         <p><b>Mariona</b>: 660407900</p>
                         <p><b>Albert</b>: 637931142</p>
+                        <p><b>Oriol</b>: 656575899</p>
                     </li>
                 </ul>
             </div>
