--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -65,6 +65,7 @@
         <div class="container">
             <h3>Esplai Primer Trimestre 2019/20</h3>
             <section class="grid">
+                <div><a href="/docs/esplaiT1-2020/FITXA%20D'INSCRIPCI%C3%93%20ESPLAI.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Fitxa Inscripció Esplai" src="/resources/logo_cepitu.png"></a><p>Fitxa Inscripció Esplai</p></div>
                 <div><a href="/docs/esplaiT1-2020/normativa%20inscripcions.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Inscripcions Esplai</p></div>
             </section>
             
