--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -65,6 +65,9 @@
         <div class="container">
             <h3>Esplai Primer Trimestre 2019/20</h3>
             <section class="grid">
+                <div><a href="/docs/esplaiT1-2020/AUTORITZACIO%CC%81%20PER%20SORTIR%20AL%20CARRER.pdf" title="Autorització per sortir al carrer" target="_blank"> <img alt="Autorització per sortir al carrer" src="/resources/logo_cepitu.png"></a><p>Autorització per sortir al carrer</p></div>
+                <div><a href="/docs/esplaiT1-2020/Col%C2%B7loqui%20Primer%20Trimestre.pdf" title="Col·loqui Primer Trimestre" target="_blank"> <img alt="Col·loqui Primer Trimestre" src="/resources/logo_cepitu.png"></a><p>Col·loqui Primer Trimestre</p></div>
+                <div><a href="/docs/esplaiT1-2020/TRETS%20IDENTITARIS%20C.pdf" title="Ideari C.E.TUM-TUM" target="_blank"> <img alt="Ideari C.E.TUM-TUM" src="/resources/logo_cepitu.png"></a><p>Ideari C.E.TUM-TUM</p></div>
                 <div><a href="/docs/esplaiT1-2020/Calendari%20Esplai%20Primer%20Trimestre.pdf" title="Calendari d'Esplai Primer Trimestre" target="_blank"> <img alt="Calendari d'Esplai Primer Trimestre" src="/resources/logo_cepitu.png"></a><p>Calendari d'Esplai Primer Trimestre</p></div>
                 <div><a href="/docs/esplaiT1-2020/FITXA%20D'INSCRIPCI%C3%93%20ESPLAI.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Fitxa Inscripció Esplai" src="/resources/logo_cepitu.png"></a><p>Fitxa Inscripció Esplai</p></div>
                 <div><a href="/docs/esplaiT1-2020/normativa%20inscripcions.pdf" title="Inscripcions Esplai" target="_blank"> <img alt="Normativa d'Inscripció" src="/resources/logo_cepitu.png"></a><p>Inscripcions Esplai</p></div>
