Missed to add on info page

--- a/pages/informacio.html
+++ b/pages/informacio.html
@@ -63,6 +63,11 @@
         </section>
         
         <div class="container">
+            <h3>Esplai Segon Trimestre 2019/20</h3>
+            <section class="grid">
+                <div><a href="/docs/esplaiT2-2020/Calendari%20Esplai%20Segon%20Trimestre.pdf" title="Calendari d'Esplai Segon Trimestre" target="_blank"> <img alt="Calendari d'Esplai Segon Trimestre" src="/resources/logo_cepitu.png"></a><p>Calendari d'Esplai Segon Trimestre</p></div>
+            </section>
+        
             <h3>Esplai Primer Trimestre 2019/20</h3>
             <section class="grid">
                 <div><a href="/docs/esplaiT1-2020/AUTORITZACIO%CC%81%20PER%20SORTIR%20AL%20CARRER.pdf" title="Autorització per sortir al carrer" target="_blank"> <img alt="Autorització per sortir al carrer" src="/resources/logo_cepitu.png"></a><p>Autorització per sortir al carrer</p></div>
