Added summer song and start docs

--- a/pages/cancons.html
+++ b/pages/cancons.html
@@ -65,6 +65,7 @@
             <section class="song-buttons-container">
                 <div class="song-button" id="cancoEsplai2016" onClick="writeSong('cancoEsplai2016'), autoScrollById('song-display')"><span>ESPLAI 2016</span></div>
                 <div class="song-button" id="cancoEsplai2012" onClick="writeSong('cancoEsplai2012'), autoScrollById('song-display')"><span>ESPLAI 2012</span></div>
+                <div class="song-button" id="canco2020" onClick="writeSong('canco2020'), autoScrollById('song-display')"><span>COLÒNIES 2020</span></div>
                 <div class="song-button" id="canco2019" onClick="writeSong('canco2019'), autoScrollById('song-display')"><span>COLÒNIES 2019</span></div>
                 <div class="song-button" id="canco2018" onClick="writeSong('canco2018'), autoScrollById('song-display')"><span>COLÒNIES 2018</span></div>
                 <div class="song-button" id="canco2017" onClick="writeSong('canco2017'), autoScrollById('song-display')"><span>COLÒNIES 2017</span></div>
