Actualitzades ubiacio esplai i colonies i contactes de respons

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -58,10 +58,10 @@
                 <ul>
                     <li><img src="/resources/CepituArmy.jpg"/></li>
                     <li><h4>Responsables d'Esplai</h4>
-                        <p><b>Queralt</b>: 685 111 767</p>
-                        <p><b>Jan</b>: 687 007 305</p>
+                        <p><b>Mar</b>: 682 659 620</p>
+                        <p><b>Núria</b>: 640 612 816</p>
                         <h4>Responsables de Colònies</h4>
-                        <p><b>Oriol</b>: 656 575 899</p>
+                        <p><b>Mariola</b>: 645 158 389</p>
                         <p><b>Marta</b>: 627 117 961</p>
                     </li>
                 </ul>
@@ -79,8 +79,8 @@
         
         <div class="maps">
             <div class="container">
-                <p>Pots trobar-nos els dissabtes de 16:30 a 19:30 a l'<b>Escola Bisbat d'Egara</b></p>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2985.4644287353326!2d2.0139501154025057!3d41.55919209328984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12a492ddab3cad03%3A0x97373e02efda687d!2sEscola+Bisbat+d&#39;%C3%88gara!5e0!3m2!1ses!2ses!4v1517920111965" width="80%" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+                <p>Pots trobar-nos els dissabtes de 16:30 a 19:30 a l'<b>Escola El Vallès</b></p>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11942.52052484261!2d2.0050543!3d41.555605!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x54887ec8015c2795!2sEscola%20El%20Vall%C3%A8s!5e0!3m2!1ses!2ses!4v1650993138349!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
         
