--- a/pages/esplai.html
+++ b/pages/esplai.html
@@ -81,7 +81,7 @@
                 <p>Dins del nostre esplai ens dividim en grups en funció de l'edat. Cada grup adapta les seves activitats mantenint un fil conductor comú en tots els grups. Aquest centre d'interès canvia cada trimestre i va relacionat amb un valor.</p>
                 <p>Cada trimestre organitzem una <b>sortida i una trobada amb les families</b> diferent.</p>
                 <p><b>On i quan?</b></p>
-                <p>Cada dissabte de 16:30 a 19:30 a l'escola Bisbat d'Egara</p>
+                <p>Cada dissabte de 16:30 a 19:30 a l'escola El Vallès</p>
                 <p><b>Quin grup faig?</b></p>
             </div>
         </section>
@@ -164,10 +164,8 @@
                 <div class="separator"></div>
                 <h2>Minicolònies</h2>
                 <p>Per setmana santa viatgem a la garrotxa per endinsar-nos, durant quatre dies, en una nova aventura. Fem cohesió de grup, gimcames, excursions, jocs de nit i altres activitats per continuar el curs amb les mateixes ganes que a l'inici.</p>
-                <p>Tot això ho viurem a Mas La Coromina, una casa de colònies situada a la Vall de Bianya, envoltada de prats i boscos.</p>
                 <ul>
                     <li><img src="/resources/minocolonies1.jpg"></li>
-                    <li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d11816.112315650045!2d2.4313444!3d42.2352131!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xcc8e5558cefda8f1!2sMas+Coromina!5e0!3m2!1ses!2ses!4v1518795834020" width="300" height="220" frameborder="0" style="border:0" allowfullscreen></iframe></li>
                 </ul>
                 <div class="separator"></div>
                 <h2>Sortida a la Platja</h2>
